etapa-03-observability/manifests/prometheus-ingress.yaml
###############################################################################
# Ingress para Prometheus UI
# Acceder via: http://<LB_URL>/prometheus
###############################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-prometheus
                port:
                  number: 9090
